Fixed scroll bar reappearing shifting problem

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,8 @@
 body {
 	background-color: #f0f0f0;
 	font-family: trebuchet ms, trebuchet, arial, helvetica, geneva, sans-serif;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 #title {
